@@ -1257,6 +1257,8 @@ $wgMessageStructure = array(
 		'ipadressorusername',
 		'ipbexpiry',
 		'ipbreason',
+		'ipbreasonotherlist',
+		'ipbreason-list',
 		'ipbanononly',
 		'ipbcreateaccount',
 		'ipbenableautoblock',
@@ -1264,6 +1266,7 @@ $wgMessageStructure = array(
 		'ipbother',
 		'ipboptions',
 		'ipbotheroption',
+		'ipbotherreason',
 		'ipbhidename',
 		'badipaddress',
 		'blockipsuccesssub',
